--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>GranCanariaTetris</groupId>
     <artifactId>GranCanariaTetris</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <properties>
         <spring.version>4.1.6.RELEASE</spring.version>
         <java.version>1.8</java.version>
@@ -46,6 +46,19 @@
                 <version>8.7.0</version>
                 <configuration>
                     <mainClass>Tetris.Launcher</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>Tetris.Launcher</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
